Signed-off-by: DreamInSun <DreamInSun@github>

--- a/SRS-CentOS6-x86_64-2.0.230/INSTALL
+++ b/SRS-CentOS6-x86_64-2.0.230/INSTALL
@@ -1,7 +1,7 @@
 #!/bin/bash
 
 # user can config the following configs, then package.
-INSTALL=/usr/local/srs
+INSTALL=/srs
 
 ##################################################################################
 ##################################################################################
